--- a/templates/accounts/password_change_done.html
+++ b/templates/accounts/password_change_done.html
@@ -1,2 +1,15 @@
-<p>Your password has been changed successifull</p>
+<header
+                class="site-header mt-0 section-padding d-flex justify-content-center align-items-center"
+                >
+                <div class="container">
+                  <div class="row">
+                    <div class="col-lg-10 col-12">
+                        <h1>
+                            <p>Your password has been changed successifull</p>
+                        </h1>
+                      </div>
+                    </div>
+                  </div>
+                </header>
+
 <a href="{% url 'login' %}">Log-in</a>
