--- a/templates/accounts/password_change_form.html
+++ b/templates/accounts/password_change_form.html
@@ -46,11 +46,24 @@ https://www.tooplate.com/view/2127-little-fashion
 <div>     
         <main>
 
-            <section class="sign-in-form section-padding">
+            <section class="">
+                <header
+                class="site-header mt-0 section-padding d-flex justify-content-center align-items-center"
+                >
                 <div class="container">
+                  <div class="row">
+                    <div class="col-lg-10 col-12">
+                        <h1>
+                            <h1 class="hero-title text-center mb-5">Change Password</h1>
+                        </h1>
+                      </div>
+                    </div>
+                  </div>
+                </header>
+                <div class="container mt-5">
                     <div class="row">
 
-                        <h1 class="hero-title text-center mb-5">Change Password</h1>
+                        
                         <div class="col-lg-8 mx-auto col-12 bg-body shadow p-5">
 
                             {% include 'components/message.html' %}
