--- a/templates/products/index.html
+++ b/templates/products/index.html
@@ -93,7 +93,7 @@
                             <p class="product-p">{{c.crop_desc}}</p>
                         </div>
                         
-                        <small class="product-price text-muted ms-auto mt-auto mb-5">${{c.crop_price}}</small>
+                        <small class="product-price text-muted ms-auto mt-auto mb-5">&#8358;{{c.crop_price}}</small>
                     </div>
                 </div>
             </div>
