--- a/templates/Orders/create.html
+++ b/templates/Orders/create.html
@@ -130,7 +130,7 @@ https://www.tooplate.com/view/2127-little-fashion
             <div class="form-floating">
               <input
                 type="text"
-                name="Location"
+                name="location"
                 id="location"
                 class="form-control"
                 value="{{address.location}}"
@@ -139,7 +139,7 @@ https://www.tooplate.com/view/2127-little-fashion
 
               <label for="cprice">Location</label>
             </div>
-            <a href="{% url 'edit-address' %}" class="float-end">Update Your Address</a>
+            <a href="{% url 'account' %}" class="float-end">Update Your Account</a>
             <br />
             <br />
 
