--- a/templates/base.html
+++ b/templates/base.html
@@ -144,11 +144,11 @@ https://www.tooplate.com/view/2127-little-fashion
 
                     <ul class="social-icon">
 
-                        <li><a href="#" class="social-icon-link bi-youtube"></a></li>
+                        <li><a href="https://www.youtube.com/@Rando_Tech_Hausa" class="social-icon-link bi-youtube"></a></li>
 
                         <li><a href="#" class="social-icon-link bi-whatsapp"></a></li>
 
-                        <li><a href="#" class="social-icon-link bi-instagram"></a></li>
+                        <li><a href="https://www.instagram.com/aliyumuhd9990/" class="social-icon-link bi-instagram"></a></li>
 
                         <li><a href="#" class="social-icon-link bi-skype"></a></li>
                     </ul>
